# pgeo

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/mdspan/: CMakeLists.txt
src/: CMakeLists.txt  Point.cpp  Point.h  Vector3.cpp  Vector3.h
src/include/: pgeo.h
src/include/pgeo/: Addition.h  Determinant.h  ForwardDeclarations.h  InnerProduct.h  Intersection.h  Inverse.h  Join.h  Line.h  MDSpanSupport.h  Matrix.h  MatrixEngine.h  MatrixEngineSupport.h  MatrixViewEngine.h  Multiplication.h  Plane.h  Point.h  PointSupport.h  PrivateSupport.h  SideWrap.h  Subtraction.h  TransposeViewEngine.h
tests/: CMakeLists.txt  TestMain.cpp  common.h  test_addition.cpp  test_determinant.cpp  test_inner_product.cpp  test_intersection.cpp  test_inverse.cpp  test_join_and_meet.cpp  test_line.cpp  test_main.cpp  test_matrix.cpp  test_matrix_views.cpp  test_multiplication.cpp  test_plane.cpp  test_point.cpp  test_side_wrap.cpp  test_subtraction.cpp  test_vector.cpp  utilities.h
